--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,9 +2,9 @@ body {
   background-color: #f5f6fa;
 }
 
-.app {
+.wrapper {
   max-width: 1200px;
-  margin: 0 auto;
+  margin: auto;
   padding: 20px;
 
   .main {
