--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,6 +2,13 @@ body {
   background-color: #f5f6fa;
 }
 
+button,
+h4,
+h1,
+select {
+  cursor: pointer;
+}
+
 header {
   display: flex;
   justify-content: flex-start;
