--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -15,6 +15,7 @@ header {
   background-color: #fff;
   border-bottom: 1px solid #e8e8e8;
   margin-bottom: 20px;
+  padding: 1rem;
 
   h1,
   h4 {
@@ -241,4 +242,9 @@ select {
 
 .toggle {
   color: black;
+}
+
+.form-errors {
+  color: #a444;
+  font-size: 1.1rem;
 }
